--- a/resources/sass/pages/levels/_level2.scss
+++ b/resources/sass/pages/levels/_level2.scss
@@ -2,7 +2,7 @@
 @use '../../utils/mixins' as *;
 
 // ===================================
-// Level 2 (Cơ quan/Phân xưởng) - Green theme
+// Level 2 (Cơ quan - Phân xưởng) - Green theme
 // ===================================
 
 .level2-layout {
