--- a/resources/sass/layout/_banner.scss
+++ b/resources/sass/layout/_banner.scss
@@ -6,19 +6,31 @@
     height: $banner-height;
     @include center-content;
     
+    .container {
+        width: 100%;
+    }
+    
     &__content {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         text-align: center;
         width: 100%;
+
+        @include mobile {
+            padding: 0 10px;
+        }
     }
 
     &__title {
         color: $white;
-        font-size: 24px;
+        font-size: 40px;
         font-weight: $font-weight-bold;
         text-transform: uppercase;
         letter-spacing: 1px;
         margin: 0;
         text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+        flex: 1;
 
         @include mobile {
             font-size: 18px;
@@ -27,6 +39,47 @@
 
         @include tablet {
             font-size: 20px;
+        }
+    }
+
+    &__logo {
+        display: flex;
+        align-items: center;
+        flex-shrink: 0;
+        
+        &--left {
+            margin-right: 20px;
+            
+            @include mobile {
+                margin-right: 10px;
+            }
+        }
+        
+        &--right {
+            margin-left: 20px;
+            
+            @include mobile {
+                margin-left: 10px;
+            }
+        }
+    }
+
+    &__logo-image {
+        height: 90px;
+        width: auto;
+        opacity: 0.9;
+        transition: opacity 0.3s ease;
+
+        &:hover {
+            opacity: 1;
+        }
+
+        @include mobile {
+            height: 45px;
+        }
+
+        @include tablet {
+            height: 50px;
         }
     }
 }
